syntax = "proto3";

package CatalogService.Grpc;

import "google/protobuf/wrappers.proto";

service ObjectsGrpc {
  rpc GetObjectsData (ObjectsIdsModel) returns (ObjectsModel) {}
}

message ObjectsModel{
    repeated ObjectModel Objects = 1;
}

// The User response DTO
message ObjectModel {
  int32 id = 1;
  google.protobuf.StringValue name = 2;
  google.protobuf.StringValue description = 3;      
  google.protobuf.StringValue photo_url = 4;
}

message ObjectsIdsModel {
    repeated int32 ObjectsIds = 1;
}